{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 495,
  "lineage": "04c32315-c4e0-97eb-1033-b79820f462f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec861caad002376",
            "association_id": "eipassoc-02d5adba081d26b8d",
            "domain": "vpc",
            "id": "eipalloc-0dec861caad002376",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bf9603caf9de6d70",
            "private_dns": "ip-10-0-1-140.us-east-2.compute.internal",
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-13-59-88-225.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.88.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "exercitiu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0331ebbf81138e4de",
            "arn": "arn:aws:ec2:us-east-2:193118517679:instance/i-086f388aca46f7498",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086f388aca46f7498",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKP22",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2d6c9616b94a210",
            "private_dns": "ip-10-0-1-28.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_ip": "3.129.194.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af5ed59266dd930f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c5c9fbabb5e34ea",
            "tags": {
              "Name": "exercitiu-instance"
            },
            "tags_all": {
              "Name": "exercitiu-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0021290005deec6c9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.sg_exercitiu",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exercitiu_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:internet-gateway/igw-020baccd5ef3b2a46",
            "id": "igw-020baccd5ef3b2a46",
            "owner_id": "193118517679",
            "tags": {
              "Name": "exercitiu-igw"
            },
            "tags_all": {
              "Name": "exercitiu-igw"
            },
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "dependencies": [
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "exercitiu_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec861caad002376",
            "association_id": "eipassoc-02d5adba081d26b8d",
            "connectivity_type": "public",
            "id": "nat-0d4d873404bcea5ee",
            "network_interface_id": "eni-0bf9603caf9de6d70",
            "private_ip": "10.0.1.140",
            "public_ip": "13.59.88.225",
            "subnet_id": "subnet-02c5c9fbabb5e34ea",
            "tags": {
              "Name": "exercitiu-nat-gw"
            },
            "tags_all": {
              "Name": "exercitiu-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exercitiu_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:route-table/rtb-0d60eadff54ac170d",
            "id": "rtb-0d60eadff54ac170d",
            "owner_id": "193118517679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4d873404bcea5ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exercitiu-private-rt"
            },
            "tags_all": {
              "Name": "exercitiu-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.exercitiu_nat_gw",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exercitiu_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:route-table/rtb-0cde9791925aed139",
            "id": "rtb-0cde9791925aed139",
            "owner_id": "193118517679",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020baccd5ef3b2a46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exercitiu-rt"
            },
            "tags_all": {
              "Name": "exercitiu-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exercitiu_igw",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03da124cff66725ab",
            "route_table_id": "rtb-0d60eadff54ac170d",
            "subnet_id": "subnet-0712889fdf4128feb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.exercitiu_nat_gw",
            "aws_route_table.exercitiu_private_rt",
            "aws_subnet.exercitiu_subnet_private_1",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0946119ab2735127c",
            "route_table_id": "rtb-0d60eadff54ac170d",
            "subnet_id": "subnet-0a52b4dd2c7cfe8f9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.exercitiu_nat_gw",
            "aws_route_table.exercitiu_private_rt",
            "aws_subnet.exercitiu_subnet_private_2",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exercitiu_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae21153cc691e7b",
            "route_table_id": "rtb-0cde9791925aed139",
            "subnet_id": "subnet-02c5c9fbabb5e34ea"
          },
          "dependencies": [
            "aws_internet_gateway.exercitiu_igw",
            "aws_route_table.exercitiu_rt",
            "aws_subnet.exercitiu_subnet_public",
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_exercitiu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:security-group/sg-0021290005deec6c9",
            "description": "Inbound from Lambda to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0021290005deec6c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_lambda_to_rds",
            "name_prefix": "",
            "owner_id": "193118517679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exercitiu_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:subnet/subnet-0712889fdf4128feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0712889fdf4128feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193118517679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercitiu-subnet-private-1"
            },
            "tags_all": {
              "Name": "exercitiu-subnet-private-1"
            },
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "dependencies": [
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exercitiu_subnet_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:subnet/subnet-0a52b4dd2c7cfe8f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a52b4dd2c7cfe8f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193118517679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercitiu-subnet-private-2"
            },
            "tags_all": {
              "Name": "exercitiu-subnet-private-2"
            },
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "dependencies": [
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exercitiu_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:subnet/subnet-02c5c9fbabb5e34ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c5c9fbabb5e34ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193118517679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercitiu-subnet-public"
            },
            "tags_all": {
              "Name": "exercitiu-subnet-public"
            },
            "vpc_id": "vpc-0f63b1818c3aeb70d"
          },
          "dependencies": [
            "aws_vpc.exercitiu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exercitiu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:193118517679:vpc/vpc-0f63b1818c3aeb70d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0799d78aba5b9d616",
            "default_route_table_id": "rtb-0d012a1105be0fcd4",
            "default_security_group_id": "sg-03400f12948b8c020",
            "dhcp_options_id": "dopt-0361288a46d3243ff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f63b1818c3aeb70d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d012a1105be0fcd4",
            "owner_id": "193118517679",
            "tags": {
              "Name": "exercitiu-vpc"
            },
            "tags_all": {
              "Name": "exercitiu-vpc"
            }
          }
        }
      ]
    }
  ]
}